add api get room by pagination